had to create a new javascript file to handle light and dark mode toggle issues with logo on the blog page, but got completed. Updated and tweaked other issues on the site, including minor styling.

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -24,7 +24,3 @@ button {
     background-color: #25bd6b;
     color: #fff;
 }
-
-footer {
-    padding: 25px 0;
-}
