--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,8 +18,6 @@ body {
     padding: 20px 3%;
 }
 
-/* downside to useing vh instead of % is that it's the viewport, so we need % instead */
-
 a {
     color: #333;
     text-decoration: none;
@@ -33,6 +31,10 @@ button {
     cursor: pointer;
 }
 
+footer {
+    padding: 25px 0;
+}
+
 footer p {
     font-size: 12px;
 }
@@ -42,7 +44,7 @@ footer p {
     display: grid;
     grid-template-columns: 50% 50%;
     grid-column-gap: 10px;
-    /* grid-row-gap: 15px; */
+    grid-row-gap: 15px;
 }
 
 .row, .column {
@@ -72,11 +74,15 @@ footer p {
 .flex-1 {
     flex: 1;
 }
-/* flexbox is row by default so by adding column above, column also needs to be direction: column */
 
 /* CUSTOM STYLES */
 header {
     padding: 8px 0;
+}
+
+header nav {
+    display: flex;
+    align-items: center;
 }
 
 header nav a:hover {
@@ -85,6 +91,10 @@ header nav a:hover {
 
 header nav a:not(:last-child) {
     margin-right: 15px
+}
+
+header img.logo {
+    max-height: 60px;
 }
 
 main > h1 {
@@ -97,6 +107,10 @@ h1 {
 
 h2 {
     font-size: 24px;
+}
+
+footer {
+    padding: 25px 0;
 }
 
 /* Home/Add Posts Page */
@@ -113,7 +127,6 @@ h2 {
 }
 
 /* LIGHT / DARK MODE TOGGLE STYLES */
-
 /* light mode */
 .light-mode {
     background-color: #fff;
@@ -134,9 +147,7 @@ h2 {
     color: #fff;
 }
 
-
 /* RESPONSIVE STYLES */
-
 /* Tablet / mobile breakpoint */
 @media screen and (max-width: 768px) {
     .grid-container {
